added providers select to prompt form and prompt single overview
