# server/App/execute/utils.py
@@ -66,7 +66,7 @@ async def execute_ai_function(
 
         # parse as AIFunctionOutput
         output = AIFunctionOutput(
-            prompt=[PromptMessage(**data) for data in json.loads(result.prompt.raw)],
+            prompt_messages=[PromptMessage(**data) for data in json.loads(result.prompt.raw)],
             response=json.loads(result.response.output)
             if is_json
             else result.response.output,
